--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                   <a href="photography.html">
                     
                   <img
-                    src="././images/P1090094-Enhanced-NR-2 2.png"
+                    src="./images/P1090094-Enhanced-NR-2 2.png"
 
                     width="176"
                     height="394"
