--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
               <div>
                 <link href="./c_photo2.css" rel="stylesheet" />
                 <div class="c_photo2-instance">
-                  <a href="/photography">
+                  <a href="/photography/gallery/">
                     
                     <img
                     src="./images/P1090094-Enhanced-NR-2 2.png"
