--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 <link href="./c_there-isn--much-of.css" rel="stylesheet" />
                 <div class="c_there-isn--much-of-text">
                   <p class="c_there-isn--much-of-text1">
-                    The wise are the center point of life's compass, but
+                     <!-- are the center point of life's compass, butThe wise
                   </p>
-                  <p class="c_there-isn--much-of-text2"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Love knows they are lost within that circle.</p>
+                  <p class="c_there-isn--much-of-text2"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Love knows they are lost within that circle.</p> -->
                   <p class="c_there-isn--much-of-text3"></p>
                 </div>
               </div>
@@ -225,7 +225,7 @@
               <div>
                 <link href="./c_photo2.css" rel="stylesheet" />
                 <div class="c_photo2-instance">
-                  <a href="/photography/gallery/">
+                  <a href="/visual/light/">
                     
                     <img
                     src="./images/P1090094-Enhanced-NR-2 2.png"
@@ -298,7 +298,7 @@
                   />
 
                   <img
-                  src="./assets/Writinginfo.svg"
+                  src="./assets/Thoughts.svg"
                   width="437"
                   height="541"
                   class="c_writinginfo"
@@ -346,7 +346,7 @@
                     />
 
                   <img
-                  src="./assets/Musicinfo.svg"
+                  src="./assets/Sound.svg"
                   width="437"
                   height="541"
                   class="c_musicinfo"
