--- a/index.html
+++ b/index.html
@@ -186,14 +186,17 @@
                   draggable="false"
                   unselectable="on"
                   />
+                  <picture>
+                    <source srcset="./assets/Handle(15).svg" media="(max-width: 760px)">
                   <img
-                    src="./assets/Handle(5).svg"
+                    src="./assets/Handle(13).svg"
                     width="157"
                     height="469"
                     class="c_taiko3-rectangle"
                     draggable="false"
                     unselectable="on"
                     />
+                    </picture>
                   <img
                     src="./assets/rectangle3.svg"
                     width="157"
@@ -235,15 +238,17 @@
                     draggable="false"
                     unselectable="on"
                     />
-
+                <picture>
+                  <source srcset="./assets/Camera(12).svg" media="(max-width: 760px)">
                   <img
-                    src="./assets/Camera(5).svg"
+                    src="./assets/Camera(11).svg"
                     width="176"
                     height="394"
                     class="c_photo2-rectangle"
                     draggable="false"
                     unselectable="on"
                     />
+                  </picture>
 
                   <img
                     src="./assets/Rectangle 2.svg"
@@ -257,7 +262,7 @@
                   </a>
 
                 <img
-                src="./assets/PhotoInfo.svg"
+                src="./assets/Info Card(6).svg"
                 width="437"
                 height="541"
                 class="c_photoinfo"
@@ -278,6 +283,7 @@
               <div>
                 <link href="./c_text.css" rel="stylesheet" />
                 <div class="c_text-instance">
+                  <a href="/text/translations/">
 
                   <img
                   src="./assets/Rectangle 1.svg"
@@ -298,36 +304,38 @@
                   />
 
                   <img
-                  src="./assets/Thoughts.svg"
+                  src="./assets/Info Card(5).svg"
                   width="437"
                   height="541"
                   class="c_writinginfo"
                   draggable="false"
                   unselectable="on"
                   />
-
+                </a>
               </div>
 
               <div>
                 <link href="./c_music3.css" rel="stylesheet" />
                 <div class="c_music3-instance">
                   <img
-                  src="./images/P1150693-Enhanced-NR 1.png"
+                  src="./images/P1150654-Enhanced-NR 1(1).png"
                   width="151"
                   height="307"
                   class="c_music3-rectangle"
                   draggable="false"
                   unselectable="on"
                   />
-
+                  <picture> 
+                    <source srcset="./assets/Headphone(23).svg" media="(max-width: 760px)">
                   <img
-                    src="./assets/Headphone(8).svg"
+                    src="./assets/Headphone(21).svg"
                     width="151"
                     height="307"
                     class="c_music3-rectangle"
                     draggable="false"
                     unselectable="on"
                     />
+                  </picture> 
                   <!-- <img
                   src="./assets/Headphone(2).svg"
                   width="65"
