--- a/navbar.html
+++ b/navbar.html
@@ -49,12 +49,13 @@
                 <a href="/visual/kamae" class="submenu" id="photography-sub6">&nbsp;&nbsp;&nbsp;&nbsp;Kamae</a>
                 <a href="/visual/ktm-690" class="submenu" id="photography-sub7">&nbsp;&nbsp;&nbsp;&nbsp;KTM 690</a>
                 <a href="/visual/long-shutter/" class="submenu" id="photography-sub8">&nbsp;&nbsp;&nbsp;&nbsp;Long Shutter</a>
+                <a href="/visual/taikopalooza/" class="submenu" id="photography-sub9">&nbsp;&nbsp;&nbsp;&nbsp;Taikopalooza</a>
             </div>
         </li>
         <li>
             <a href="#" class="dropdown-toggle" data-dropdown="text">Text <span class="dropdown-icon">&#9662;</span></a>
             <div class="dropdown" id="text">
-                <a href="/text/persian-poetry" class="submenu" id="writing-sub1">&nbsp;&nbsp;&nbsp;&nbsp;Translations</a>
+                <a href="/text/translations" class="submenu" id="writing-sub1">&nbsp;&nbsp;&nbsp;&nbsp;Translations</a>
             </div>
         </li>
         <li>
