--- a/visual/index.html
+++ b/visual/index.html
@@ -10,7 +10,7 @@
 <body style="background-color: #2a2a2a;"> 
 
     <script type="text/javascript">
-        window.location.href = "/photography/gallery";
+        window.location.href = "/visual/light";
       </script>
 
     <div class="item">
