--- a/taiko/yamane-taiko/index.html
+++ b/taiko/yamane-taiko/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yamane Taiko</title>
-    <link rel="stylesheet" href="/home.css">
+    <link rel="stylesheet" href="./taiko.css">
     <link rel="shortcut icon" href="/images/Clock(1).svg" type="image/x-icon">
 </head>
 <body style="background-color: #2a2a2a;"> 
