--- a/text/translations/index.html
+++ b/text/translations/index.html
@@ -64,11 +64,11 @@
                         <div class="text2">
                             Oh how colorless and formless that I am
                             <br>
-                            When will I see the self that I am?
+                            When will I see the me that I am?
                             <p>&nbsp; </p>
                             You said, forthbring secrets to center  
                             <br>
-                            Where is the center in the center that I am?
+                            Where is center in the center that I am?
                             <p>&nbsp; </p>
                             When will this soul of mine be still
                             <br>
