--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <div>
             <link href="./c_TheVault.css" rel="stylesheet" />
             <img
-                src="./assets/Front Page.svg"
+                src="./assets/saam hamidi.svg"
                 width="173"
                 height="79"
                 class="c_TheVault"
@@ -187,9 +187,9 @@
                   unselectable="on"
                   />
                   <picture>
-                    <source srcset="./assets/Handle(15).svg" media="(max-width: 760px)">
+                    <source srcset="./assets/Handle.svg" media="(max-width: 760px)">
                   <img
-                    src="./assets/Handle(13).svg"
+                    src="./assets/Handle.svg"
                     width="157"
                     height="469"
                     class="c_taiko3-rectangle"
@@ -239,9 +239,9 @@
                     unselectable="on"
                     />
                 <picture>
-                  <source srcset="./assets/Camera(12).svg" media="(max-width: 760px)">
+                  <source srcset="./assets/Camera.svg" media="(max-width: 760px)">
                   <img
-                    src="./assets/Camera(11).svg"
+                    src="./assets/Camera.svg"
                     width="176"
                     height="394"
                     class="c_photo2-rectangle"
@@ -271,14 +271,12 @@
                 />
 
                 </div>
-                <!-- <img
-                src="./assets/ABOUT(noshadow).svg"
-                width="118"
-                height="46"
+                <img
+                src="./assets/ABOUT.svg"
                 class="c_a-bout-text"
                 draggable="false"
               unselectable="on"
-                /> -->
+                />
               </div>
               <div>
                 <link href="./c_text.css" rel="stylesheet" />
@@ -326,9 +324,9 @@
                   unselectable="on"
                   />
                   <picture> 
-                    <source srcset="./assets/Headphone(23).svg" media="(max-width: 760px)">
+                    <source srcset="./assets/Headphone (1).svg" media="(max-width: 760px)">
                   <img
-                    src="./assets/Headphone(21).svg"
+                    src="./assets/Headphone (1).svg"
                     width="151"
                     height="307"
                     class="c_music3-rectangle"
