--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <div>
             <link href="./c_TheVault.css" rel="stylesheet" />
             <img
-                src="./assets/saam hamidi.svg"
+                src="./assets/Front Page.svg"
                 width="173"
                 height="79"
                 class="c_TheVault"
