--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
               <div>
                 <link href="./c_taiko3.css" rel="stylesheet" />
                 <div class="c_taiko3-instance">
+                  <a href="/taiko/performances/">
                   <img
                   src="./images/P1130598-Enhanced-NR 1.png"
                   width="157"
@@ -205,7 +206,7 @@
                     draggable="false"
                     unselectable="on"
                     />
-
+                  </a>
                     <img
                     src="./assets/taikoinfo.svg"
                     width="437"
@@ -228,7 +229,7 @@
               <div>
                 <link href="./c_photo2.css" rel="stylesheet" />
                 <div class="c_photo2-instance">
-                  <a href="/visual/light/">
+                  <a href="/visual/gallery/">
                     
                     <img
                     src="./images/P1090094-Enhanced-NR-2 2.png"
@@ -239,9 +240,9 @@
                     unselectable="on"
                     />
                 <picture>
-                  <source srcset="./assets/Camera.svg" media="(max-width: 760px)">
+                  <source srcset="./assets/Camera(14).svg" media="(max-width: 760px)">
                   <img
-                    src="./assets/Camera.svg"
+                    src="./assets/Camera(14).svg"
                     width="176"
                     height="394"
                     class="c_photo2-rectangle"
@@ -262,7 +263,7 @@
                   </a>
 
                 <img
-                src="./assets/Info Card(6).svg"
+                src="./assets/visualinfo.svg"
                 width="437"
                 height="541"
                 class="c_photoinfo"
@@ -271,12 +272,14 @@
                 />
 
                 </div>
+                <a href="/about/">
                 <img
                 src="./assets/ABOUT.svg"
                 class="c_a-bout-text"
                 draggable="false"
               unselectable="on"
                 />
+              </a>
               </div>
               <div>
                 <link href="./c_text.css" rel="stylesheet" />
@@ -302,7 +305,7 @@
                   />
 
                   <img
-                  src="./assets/Info Card(5).svg"
+                  src="./assets/textinfo.svg"
                   width="437"
                   height="541"
                   class="c_writinginfo"
@@ -324,9 +327,9 @@
                   unselectable="on"
                   />
                   <picture> 
-                    <source srcset="./assets/Headphone (1).svg" media="(max-width: 760px)">
+                    <source srcset="./assets/Headphone(24).svg" media="(max-width: 760px)">
                   <img
-                    src="./assets/Headphone (1).svg"
+                    src="./assets/Headphone(24).svg"
                     width="151"
                     height="307"
                     class="c_music3-rectangle"
@@ -352,7 +355,7 @@
                     />
 
                   <img
-                  src="./assets/Sound.svg"
+                  src="./assets/soundinfo.svg"
                   width="437"
                   height="541"
                   class="c_musicinfo"
