--- a/text/translations/index.html
+++ b/text/translations/index.html
@@ -64,9 +64,9 @@
                         <div class="text2">
                             Oh how colorless and formless that I am
                             <br>
-                            When will I see the me that I am?
+                            When will I see my self as I am?
                             <p>&nbsp; </p>
-                            You said, forthbring secrets to center  
+                            You said, let secrets be the center of concern
                             <br>
                             Where is center in the center that I am?
                             <p>&nbsp; </p>
@@ -76,33 +76,33 @@
                             <p>&nbsp; </p>
                             My sea has drowned within its own
                             <br>
-                            Such limitless is the sea that I am
+                            What a sea without shores that I am
                             <p>&nbsp; </p>
                             Find me not in this world or the other
                             <br>
-                            They are lost in the world that I am
+                            For both are lost in the world that I am
                             <p>&nbsp; </p>
-                            Severed of profit and loss, aught 
+                            Severed of profit and loss, of aught 
                             <br>
                             To no profit and no loss that I am
                             <p>&nbsp; </p>
-                            I said, oh dear you are just like me, he said
+                            I said, my dear you are my likeness, he said
                             <br>
                             What is likeness to this that I am?
                             <p>&nbsp; </p>
                             I said, you are so, he said, silence—
                             <br>
-                            No tongue knows of what that I am
+                            No tongue knows of that which I am
                             <p>&nbsp; </p>
                             I said, then as my tongue is of no use
                             <br>
                             This speaker without tongue that I am
                             <p>&nbsp; </p>
-                            I become in nothingness, as fog has no feet
+                            I become in nothingness, as feetless fog
                             <br>
                             This runner without feet that I am
                             <p>&nbsp; </p>
-                            A voice calls, why do you run? Look—
+                            A voice calls, why run? Look
                             <br>
                             Behold the veiled face that I am
                             <p>&nbsp; </p>
