--- a/index.html
+++ b/index.html
@@ -317,6 +317,7 @@
 
               <div>
                 <link href="./c_music3.css" rel="stylesheet" />
+                <a href="/sound/music">
                 <div class="c_music3-instance">
                   <img
                   src="./images/P1150654-Enhanced-NR 1(1).png"
@@ -353,7 +354,7 @@
                     draggable="false"
                     unselectable="on"
                     />
-
+                  </a>
                   <img
                   src="./assets/soundinfo.svg"
                   width="437"
