--- a/navbar.html
+++ b/navbar.html
@@ -57,7 +57,7 @@
             <a href="#" class="dropdown-toggle" data-dropdown="sound">Sound <span class="dropdown-icon">&#9662;</span></a>
             <div class="dropdown" id="sound">
                 <a href="/sound/hrtf" class="submenu" id="music-sub1">&nbsp;&nbsp;&nbsp;&nbsp;HRTF Projects</a>
-                <a href="/sound/partitions" class="submenu" id="music-sub2">&nbsp;&nbsp;&nbsp;&nbsp;Partitions</a>
+                <a href="/sound/music" class="submenu" id="music-sub2">&nbsp;&nbsp;&nbsp;&nbsp;Music</a>
                 <a href="/sound/soundscape" class="submenu" id="music-sub3">&nbsp;&nbsp;&nbsp;&nbsp;Soundscapes</a>
                 
                 
