--- a/about/index.html
+++ b/about/index.html
@@ -77,12 +77,12 @@
                     <p> Storing and showcasing some of my works and projects I’ve been involved in—mostly artistic. The purpose of this site is to gather everything into one space, a “vault” that will hopefully expand over time.  </p>
                     <style>
                         p {
-                            font-family: Sansation Light, sans-serif; /* Change to the desired font */
+                            font-family: 'Sansation Light', sans-serif; /* Change to the desired font */
                             text-align: left;
                         }
                     </style>
                     <p>&nbsp; </p>
-                    <p> It is for the sake of enjoyment.</p>
+                    <!-- <p> It is for the sake of enjoyment.</p> -->
                     <p>&nbsp; </p>
                     <!-- <p> It is a vault that degrades with time.</p> -->
                     <p>&nbsp; </p>
