--- a/taiko/performances/index.html
+++ b/taiko/performances/index.html
@@ -65,7 +65,7 @@
                         }
                     </style>
 
-                    <h3>A community piece composed by Shoji Kameda (2004). Arrangement by Yamane Taiko. </h3>
+                    <h3>A community piece composed by Shoji Kameda (2004). Arranged by Yamane Taiko. </h3>
 
                     <style>
                         h3 {
