--- a/text/translations/index.html
+++ b/text/translations/index.html
@@ -102,7 +102,7 @@
                             <br>
                             This speaker without tongue that I am
                             <p>&nbsp; </p>
-                            I become in nothingness, as feetless fog
+                            I become in nothingness, as fog without feet
                             <br>
                             This runner without feet that I am
                             <p>&nbsp; </p>
