--- a/index.html
+++ b/index.html
@@ -275,7 +275,13 @@
                 <a href="/about/">
                 <img
                 src="./assets/ABOUT.svg"
-                class="c_a-bout-text"
+                class="c_about-text"
+                draggable="false"
+              unselectable="on"
+                />
+                <img
+                src="./assets/ABOUTCODE.svg"
+                class="c_about-code"
                 draggable="false"
               unselectable="on"
                 />
