--- a/taiko/performances/index.html
+++ b/taiko/performances/index.html
@@ -94,15 +94,16 @@
                     </div>
                 
                     <h6>Performers </h6>
-                    <h5>Odaiko: <br> Alison Liu </h5>
-                    <h5>Shime-Okedo (left to right): <br> Henry Helmuth, Jii, Kade Kaneshiro </h5>
-                    <h5>Chudaiko (left to right): <br> Austin Ma, Jeff Onuma, Saam Hamidi, Reika Shimizu</h5>
+                    <h5>Odaiko:  Alison Liu </h5>
+                    <h5>Shime-Okedo:  Henry Helmuth, Jii, Kade Kaneshiro </h5>
+                    <h5>Chudaiko: Austin Ma, Jeff Onuma, Saam Hamidi, Reika Shimizu</h5>
                     <style>
                         h5 {
-                            font-family: 'Rajdhani', sans-serif; /* Change to the desired font */
+                            font-family: 'Lekton'; /* Change to the desired font */
                             text-align: left;
-                            font-size: 1em;
+                            font-size: 16px;
                             padding-top: 10px;
+                            font-weight: normal;
                         }
                     </style>
                     <style>
