--- a/text/translations/index.html
+++ b/text/translations/index.html
@@ -171,9 +171,10 @@
                     <center><h3>Translations by Saam Hamidi</h3></center>
                     <style>
                         h3 {
-                            font-family: 'Rajdhani', sans-serif; /* Change to the desired font */
+                            font-family: 'Lekton'; /* Change to the desired font */
                             text-align: left;
-                            font-size:0.8em;
+                            font-size:0.75em;
+                            font-weight:normal;
                         }
                     </style>
                     <p> &nbsp; </p>
