--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
               <div>
                 <link href="./c_taiko3.css" rel="stylesheet" />
                 <div class="c_taiko3-instance">
-                  <a href="/taiko/performances/">
+                  <a href="/taiko/performances/yamane-omiyage/">
                   <picture>
                     <source srcset="./assets/Handle.svg" media="(max-width: 760px)">
                   <img
@@ -273,7 +273,7 @@
               <div>
                 <link href="./c_text.css" rel="stylesheet" />
                 <div class="c_text-instance">
-                  <a href="/text/translations/">
+                  <a href="/text/translations/ghazal-1759/">
 
                   <img
                   src="./assets/Rectangle 1.svg"
