--- a/about/index.html
+++ b/about/index.html
@@ -82,6 +82,10 @@
                         }
                     </style>
                     <p>&nbsp; </p>
+                    <p>Website designed by me using HTML, CSS, and JS.</p>
+                    <p>Layout inspired by 
+                        <a href="https://k--b.org/"  style="color: pink;"> https://k--b.org/</a>
+                         </p>
                     <!-- <p> It is for the sake of enjoyment.</p> -->
                     <p>&nbsp; </p>
                     <!-- <p> It is a vault that degrades with time.</p> -->
