--- a/taiko/performances/blossom-bash/index.html
+++ b/taiko/performances/blossom-bash/index.html
@@ -63,7 +63,7 @@
                     </style>
                     <h2>Blossom Bash</h2>
                     <hr>
-                    <h1> 4/7/2024 </h1>
+                    <h1> 04-07-2024 </h1>
                     
                     <h4>Info </h4>
 
@@ -137,7 +137,7 @@
                     </style>
 
                     <p>&nbsp; </p>
-                    <hr>
+                    <!-- <hr> -->
                     <p>&nbsp; </p>
   
                 </div>
@@ -145,6 +145,20 @@
         </div>
     </div>
 </div>
+
+<style>
+@media (max-width: 1168px) {
+
+.nav2 {
+
+    display: none;
+
+}
+
+}
+
+</style>
+
 
     <script src="/script.js"></script>
 
