--- a/text/translations/ghazal-1759/index.html
+++ b/text/translations/ghazal-1759/index.html
@@ -57,8 +57,16 @@
                 <div class="text">
                     <h2>Ghazal 1759</h2>
                     <hr>
-
-                    <h4>Rumi</h4>
+                    <style>
+                        h1 {
+                            font-family: 'Rajdhani', sans-serif; /* Change to the desired font */
+                            text-align: center;
+                            font-size: 1em;
+                            padding-top: 5px;
+                            font-weight: 1;
+                        }
+                    </style>
+                    <h1>Rumi</h1>
                     <style>
                         h2 {
                             font-family: 'Rajdhani', sans-serif; /* Change to the desired font */
@@ -121,7 +129,7 @@
                             <br>
                             Behold the veiled face that I am
                             <p>&nbsp; </p>
-                            The instant I saw Shams of Tabrīzī
+                            The instant I see Shams of Tabrīzī
                             <br>
                             What pearls, treasures, and gems that I am
                         </div>
