--- a/navbar.html
+++ b/navbar.html
@@ -134,4 +134,13 @@
     .left li.active .dropdown-icon {
         transform: rotate(0deg); /* Rotate icon when active */
     }
+
+    @media (max-width: 868px) {
+        .dropdown-icon {
+
+        margin-left: -19px;
+
+    }
+
+    }
 </style>
