--- a/navbar.html
+++ b/navbar.html
@@ -93,7 +93,7 @@
     .dropdown-toggle {
         display: flex;
         align-items: center;
-        /* gap: 4px; Adjusts space between arrow and text */
+        gap: 4px;
     }
 
     /* Optional: Style the dropdown arrow */
@@ -127,7 +127,9 @@
         display: inline-block;
         transform: rotate(-90deg); /* Rotate icon when active */
         transition: transform 0.3s ease; /* Smooth rotation */
-        margin-left: -12px;
+        margin-left: -16px;
+        gap
+        /* padding-right: 4px; */
 
     }
 
