--- a/visual/gallery/index.html
+++ b/visual/gallery/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery</title>
-    <link rel="stylesheet" href="/home2.css">
+    <link rel="stylesheet" href="/home.css">
     <link rel="shortcut icon" href="/images/Clock(1).svg" type="image/x-icon">
 </head>
 <body style="background-color: #2a2a2a;"> 
@@ -84,7 +84,7 @@
                         <img src="photos/P1080940-2.jpg" alt="Photo 5">
                         <img src="photos/P1090002.jpg">
                         <!-- <img src="photos/P1090006-3.jpg"> -->
-                        <img src="photos/P1080948-2.jpg">
+                        <!-- <img src="photos/P1080948-2.jpg"> -->
                         
                         <!-- <img src="photos/P1070313-min.jpg"> -->
 
