--- a/sound/music/index.html
+++ b/sound/music/index.html
@@ -127,7 +127,7 @@
 
                     <h3>An experiment incoporating a reading of a Persian poem into electronic music using samples for my music class. 
                         These were made quickly—I would like to make a larger-scale project with more care.  <br> <br>
-                        <a href="/text/translations/" style="color: pink;">A translation of the poem can be found here.</a>
+                        <a href="/text/translations/ghazal-1759/" style="color: pink;">A translation of the poem can be found here.</a>
                     </h3>
                     <!-- <style>
                         a {
