--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                     />
                   </a>
                   <img
-                  src="./assets/soundinfo.svg"
+                  src="./assets/SoundInfoRedone3.svg"
                   width="437"
                   height="541"
                   class="c_musicinfo"
