--- a/navbar.html
+++ b/navbar.html
@@ -38,7 +38,7 @@
         </a>
         <div class="dropdown" id="taiko">
             <a href="/taiko/performances" class="submenu" id="taiko-sub1">&nbsp;&nbsp;&nbsp;&nbsp;Performances</a>
-            <a href="/taiko/compositions" class="submenu" id="taiko-sub2">&nbsp;&nbsp;&nbsp;&nbsp;Compositions</a>
+            <!-- <a href="/taiko/compositions" class="submenu" id="taiko-sub2">&nbsp;&nbsp;&nbsp;&nbsp;Compositions</a> -->
         </div>
     </li>
     <li>
@@ -64,9 +64,10 @@
             <span class="dropdown-icon">&#9662;</span> Sound
         </a>
         <div class="dropdown" id="sound">
-            <a href="/sound/hrtf" class="submenu" id="music-sub1">&nbsp;&nbsp;&nbsp;&nbsp;HRTF Projects</a>
+            <!-- <a href="/sound/programming" class="submenu" id="music-sub3">&nbsp;&nbsp;&nbsp;&nbsp;Programs</a>
+            <a href="/sound/hrtf" class="submenu" id="music-sub1">&nbsp;&nbsp;&nbsp;&nbsp;Instruments</a> -->
             <a href="/sound/music" class="submenu" id="music-sub2">&nbsp;&nbsp;&nbsp;&nbsp;Music</a>
-            <a href="/sound/soundscape" class="submenu" id="music-sub3">&nbsp;&nbsp;&nbsp;&nbsp;Soundscapes</a>
+    
         </div>
     </li>
     <li class="vault-door"><a href="/">Vault Door</a></li>
