--- a/navbar.html
+++ b/navbar.html
@@ -89,18 +89,25 @@
         .vault-door {
             display: block;
         }
+
+        .dropdown-icon {
+
+        padding-inline: 2px;
+       
+    }
+
     }
 
     /* Styling for dropdown toggle */
     .dropdown-toggle {
-        display: flex;
-        align-items: center;
-        gap: 4px;
+        font-size: 15px;
+
     }
 
     /* Optional: Style the dropdown arrow */
     .dropdown-icon {
         font-size: 15px;
+       
     }
 
     .dropdown {
@@ -129,6 +136,7 @@
 
         transform: rotate(-90deg); /* Rotate icon when active */
         transition: transform 0.2s ease; /* Smooth rotation */
+        margin-left: -17px;
 
         /* padding-right: 4px; */
 
