--- a/sound/music/index.html
+++ b/sound/music/index.html
@@ -49,6 +49,7 @@
                         h2 {
                             font-family: 'Rajdhani', sans-serif; /* Change to the desired font */
                             text-align: center;
+                            font-weight: normal;
                         }
                     </style>
                     <h2>Music</h2>
