--- a/sound/music/index.html
+++ b/sound/music/index.html
@@ -80,7 +80,7 @@
                         }
                     </style>
 
-                    <h3>A collection of songs, old and new memories.  <br> 
+                    <h3>Old and new memories.  <br> 
              
                     </h3>
                     <!-- <style>
