--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                <div>
                 <link href="./c_polygon1.css" rel="stylesheet" />
                 <img
-                  src="./assets/Group 1(no shadow).svg"
+                  src="./assets/Group 2.svg"
                   width="1128.1"
                   height="1148.09"
                   class="c_polygon1-vector"
