--- a/about/index.html
+++ b/about/index.html
@@ -83,7 +83,7 @@
                         }
                     </style>
                     <p>&nbsp; </p>
-                    <p>Website designed by me using HTML, CSS, and JS.</p>
+                    <p>Website designed using HTML, CSS, and JS.</p>
                     <p>Layout inspired by 
                         <a href="https://k--b.org/"  style="color: pink;"> https://k--b.org/</a>
                          </p>
