--- a/text/translations/ghazal-1759/index.html
+++ b/text/translations/ghazal-1759/index.html
@@ -187,7 +187,7 @@
                     </div>
                     <hr>
                     <p> &nbsp; </p>
-                    <center><h3>Translations by Saam Hamidi</h3></center>
+                    <!-- <center><h3>Translations by Saam Hamidi</h3></center> -->
                     <style>
                         h3 {
                             font-family: 'Rajdhani', sans-serif; /* Change to the desired font */
