--- a/archive.html
+++ b/archive.html
@@ -16,7 +16,7 @@
             }
         </style>
         <p>&nbsp; </p>
-        
+            <a class="rect-button" href="/visual/archive/tourbiere/">Tourbiere</a>
             <a class="rect-button" href="/visual/archive/taikopalooza/">Taikopalooza 2024</a>
             <a class="rect-button" href="/visual/archive/long-shutter/">Long Shutter</a>
             <a class="rect-button" href="/visual/archive/kamae/">Kamae</a>
