--- a/visual/index.html
+++ b/visual/index.html
@@ -15,18 +15,17 @@
 
     <div class="item">
         <div>
-          <link href="./c_TheVault.css" rel="stylesheet" />
-          <a href="/">
-            <img
-                src="/assets/Front Page.svg"
-                width="173"
-                height="79"
-                class="c_TheVault"
-                draggable="false"
-                unselectable="on"
-            />
-        </a>
-        </div>
+            <link href="./c_TheVault.css" rel="stylesheet" />
+            <a href="/">
+              <img
+                  src="/assets/Clockhome.svg"
+  
+                  class="c_TheVault"
+                  draggable="false"
+                  unselectable="on"
+              />
+          </a>
+          </div>
     </div>
 
     <div class="menu">
