--- a/about/index.html
+++ b/about/index.html
@@ -54,9 +54,10 @@
                     <center><h4></h4></center>
                     <style>
                         h4 {
-                            font-family: Sansation Light, sans-serif; /* Change to the desired font */
+                            font-family:'Rajdhani', sans-serif; /* Change to the desired font */
                             text-align: center;
-                            font-size: 0.75em;
+                            font-size: 1em;
+                            font-weight: normal;
                         }
                     </style>
                     <p> &nbsp; </p>
@@ -73,7 +74,8 @@
                     <div class="gallery">
                         <img src="photos/P1080971-2.jpg">
                     </div>
-
+                    <p>Saam Hamidi —</p>
+                    <br>
                     <p> Storing and showcasing some of my works and projects I’ve been involved in—mostly artistic. The purpose of this site is to gather everything into one space, a “vault” that will hopefully expand over time.  </p>
                     <style>
                         p {
