--- a/text/translations/hafez-348/index.html
+++ b/text/translations/hafez-348/index.html
@@ -86,7 +86,7 @@
                     
                     <div class="text-container">
                         <div class="text2">
-                            My sight is sea, to waste my awaiting cast
+                            My sight is of sea, to waste my patience cast
                             <br>
                             And in this doing, my heart to sea cast
                             <p>&nbsp; </p>
@@ -160,9 +160,9 @@
                             font-weight:normal;
                         }
                     </style>
-                    <h3> Translation of the poem featured in Niaz Nawab's song "Darya" </h3>
+                    <h3>Translation of the poem featured in Niaz Nawab's song "Darya" </h3>
                     <br>
-                    <h3> Rock arrangement of the song that I enjoy a lot:</h3>
+                    <h3>Rock arrangement of the song:</h3>
                     <br>
                     <iframe 
                     width=100% 
