--- a/text/translations/hafez-348/index.html
+++ b/text/translations/hafez-348/index.html
@@ -86,7 +86,7 @@
                     
                     <div class="text-container">
                         <div class="text2">
-                            My sight is of sea, to waste my patience cast
+                            My sight is the sea, to naught my patience cast
                             <br>
                             And in this doing, my heart to sea cast
                             <p>&nbsp; </p>
@@ -108,7 +108,7 @@
                             <p>&nbsp; </p>
                             A sip of wine I spill upon this palanquin
                             <br>
-                            A harp’s twang throughout this celestial dome I cast
+                            A harp’s twang into this azure dome I cast
                             <p>&nbsp; </p>
                             Hafez, it is a fault and error to lean on time
                             <br>
