--- a/visual/gallery/index.html
+++ b/visual/gallery/index.html
@@ -99,7 +99,7 @@
                         <img src="photos/P1150334-Enhanced-NR.jpg"> -->
                         <img src="photos/P1140603-Enhanced-NR.jpg">
 
-                        <img src="photos/P1150065-Enhanced-NR-min.jpg">
+                        <!-- <img src="photos/P1150065-Enhanced-NR-min.jpg"> -->
                         <!-- <img src="photos/P1150077-Enhanced-NR-min.jpg"> -->
                         
                         
