--- a/text/translations/hafez-348/index.html
+++ b/text/translations/hafez-348/index.html
@@ -86,7 +86,7 @@
                     
                     <div class="text-container">
                         <div class="text2">
-                            My sight is the sea, to naught my patience cast
+                            My sight is the sea, aside my patience cast
                             <br>
                             And in this doing, my heart to sea cast
                             <p>&nbsp; </p>
