--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                 </div>
                 <a href="/about/">
                 <img
-                src="./assets/ABOUT.svg"
+                src="./assets/Group 15(3).svg"
                 class="c_about-text"
                 draggable="false"
               unselectable="on"
