--- a/visual/gallery/index.html
+++ b/visual/gallery/index.html
@@ -66,13 +66,16 @@
                         <img src="photos/P1020770-min.jpg" alt="Photo 3"> -->
 
                         <img src="photos/P1100909-4.jpg" alt="Photo 1">
-                        <img src="photos/P1110004.jpg">
+                        <!-- <img src="photos/P1110004.jpg"> -->
                         <!-- <img src="photos/P1110043.jpg"> -->
 
                         <img src="photos/P1020767-min.jpg" alt="Photo 1">
                         <img src="photos/P1020768-min.jpg">
                         
                         <img src="photos/P1090551.jpg">
+                        
+                        <img src="photos/P1190105-2.jpg">
+                        <img src="photos/P1190106.jpg">
 
                         <img src="photos/P1090094-Enhanced-NR-2.jpg">
                         <img src="photos/makoaalbum.jpg">
