--- a/visual/gallery/index.html
+++ b/visual/gallery/index.html
@@ -75,7 +75,7 @@
                         <img src="photos/P1090551.jpg">
                         
                         <img src="photos/P1190105-2.jpg">
-                        <img src="photos/P1190106.jpg">
+                        <!-- <img src="photos/P1190106.jpg"> -->
 
                         <img src="photos/P1090094-Enhanced-NR-2.jpg">
                         <img src="photos/makoaalbum.jpg">
