--- a/text/translations/hafez-348/index.html
+++ b/text/translations/hafez-348/index.html
@@ -86,7 +86,7 @@
                     
                     <div class="text-container">
                         <div class="text2">
-                            My sight is the sea, aside my patience cast
+                            My sight is the sea, to wind my caution cast
                             <br>
                             And in this doing, my heart to sea cast
                             <p>&nbsp; </p>
@@ -94,7 +94,7 @@
                             <br>
                             That upon the sins of Adam and Eve fire cast
                             <p>&nbsp; </p>
-                            The spring of loveliness is there, where the beloved is there
+                            The spring of joy is there, where the beloved is there
                             <br>
                             I make haste that I may myself to there cast
                             <p>&nbsp; </p>
@@ -104,7 +104,7 @@
                             <p>&nbsp; </p>
                             Stricken by an arrow of heaven, pour me wine to bliss
                             <br>
-                            A knot into the belt of Gemini's quiver I may cast
+                            A knot into the belt of Gemini's quiver I cast
                             <p>&nbsp; </p>
                             A sip of wine I spill upon this palanquin
                             <br>
