--- a/text/translations/hafez-348/index.html
+++ b/text/translations/hafez-348/index.html
@@ -76,8 +76,9 @@
                     <style>
                         h4 {
                             font-family: 'Rajdhani', sans-serif; /* Change to the desired font */
-                            text-align: center;
-                            font-size: 1em;
+                            text-align: left;
+                            font-size:0.8em;
+                            font-weight:normal;
                         }
                     </style>
                     <p>&nbsp; </p>
@@ -86,7 +87,7 @@
                     
                     <div class="text-container">
                         <div class="text2">
-                            My sight is the sea, to wind my caution cast
+                            My sight is the sea, to wind my caution cast*
                             <br>
                             And in this doing, my heart to sea cast
                             <p>&nbsp; </p>
@@ -160,6 +161,9 @@
                             font-weight:normal;
                         }
                     </style>
+
+                    <h4>A direct translation of the 2nd part is: "throw patience to the desert" </h4>
+                    
                     <h3>Translation of the poem featured in Niaz Nawab's song "Darya" </h3>
                     <br>
                     <h3>Rock arrangement of the song:</h3>
