--- a/text/translations/hafez-348/index.html
+++ b/text/translations/hafez-348/index.html
@@ -162,8 +162,8 @@
                         }
                     </style>
 
-                    <h4>A direct translation of the 2nd part is: "throw patience to the desert" </h4>
-                    
+                    <h4>*The direct translation of the 2nd part is: "throw patience to the desert" </h4>
+                    <br>
                     <h3>Translation of the poem featured in Niaz Nawab's song "Darya" </h3>
                     <br>
                     <h3>Rock arrangement of the song:</h3>
