--- a/text/translations/hafez-348/index.html
+++ b/text/translations/hafez-348/index.html
@@ -87,7 +87,7 @@
                     
                     <div class="text-container">
                         <div class="text2">
-                            My sight is the sea, to wind my caution cast*
+                            My sight is the sea, to wind* my caution cast
                             <br>
                             And in this doing, my heart to sea cast
                             <p>&nbsp; </p>
@@ -162,7 +162,7 @@
                         }
                     </style>
 
-                    <h4>*The direct translation of the 2nd part is: "throw patience to the desert" </h4>
+                    <h4>*The direct translation of this part is: "throw patience to the desert" </h4>
                     <br>
                     <h3>Translation of the poem featured in Niaz Nawab's song "Darya" </h3>
                     <br>
